--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 .saluteText {
   color: #333;
-  font-size: 60vw;
+  font-size: 40vw;
   cursor: default;
 }
 
@@ -284,4 +284,23 @@
     font-size: 30px;
     text-align: center;
   }
+}
+
+a:link {
+  text-decoration: none;
+}
+
+
+a:visited {
+  text-decoration: none;
+}
+
+
+a:hover {
+  text-decoration: none;
+}
+
+
+a:active {
+  text-decoration: none;
 }
